# data_integration_pipeline

./: .env  .gitignore  Dockerfile-airflow  Makefile  README.md  docker-compose-airflow.yaml  docker-compose-infra.yaml  docker-compose-monitoring.yaml  docker-compose.yaml  documentation.md  pyproject.toml
config/: airflow.cfg  er_spec.yaml
dags/: dags.py
data_mart/gold_business_entity/: data_mart.duckdb
dev/: README.md
images/: workflow.drawio
src/data_integration_pipeline/: cli.py  settings.py
src/data_integration_pipeline/core/: metrics.py  schema_converter.py  singletons_base.py  utils.py
src/data_integration_pipeline/data/: address_abbreviations_mapping.csv  naics_mapping.csv  readme.md
src/data_integration_pipeline/io/: delta_client.py  delta_vault_client.py  duckdb_client.py  file_reader.py  file_writer.py  logger.py  s3_client.py
src/data_integration_pipeline/jobs/: 2_process_bronze_and_load_to_delta_silver.py  2_process_bronze_to_silver.py  3_audit_silver.py  4_load_silver.py  audit_silver.py  create_data_mart.py  create_deduplicated_records.py  create_gold_records.py  create_integrated_records.py  deduplicate_integrated_records.py  deduplicate_silver_data.py  process_bronze_and_load_to_delta_silver.py  run_entity_resolution.py  upload_bronze.py
src/repo_template/: settings.py
src/repo_template/core/: my_service.py
tests/: city_mbe_certifications.csv  federal_registry_entities.csv  state_dot_disadvantaged_business.csv  tests.py
tests/data/: business_entity_registry.csv  licenses_registry.csv  sub_contractors_registry.csv
(+39 files in other folders)
