[project]
name = "data_integration_pipeline"
version = "0.0.1"
authors = [{ name = "Pedro Queiros", email = "coding.paradox013@passmail.net" }]
requires-python = ">=3.11, <3.12"
readme = "README.md"
maintainers = [{ name = "Pedro Queiros", email = "coding.paradox013@passmail.net" }]
dependencies = [
    "ruff",
    "pydantic[email]",
    "retry",
    "dateparser",
    "validators",
    "rapidfuzz",
    # processess company names
    "cleanco",
    # proceses addresses
    "usaddress-scourgify",

    "great_expectations",
    "pyarrow",
    # "pandas",
    "duckdb",
    "duckdb-engine",
    "polars",
    "deltalake",
    "boto3",
    "s3fs",
    "uuid6",
    "kanoniv",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.optional-dependencies]



[project.urls]
Repository = "https://github.com/PedroMTQ/data_integration_pipeline.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_integration_pipeline"]

[tool.ruff]
line-length = 110
lint.select = ["E",  "W",  "F",  "I", "B"]
lint.ignore=["E501", "I001", "B006"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]


